fixed fonts, img on mobile, index forside

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,5 @@
 *,
 body {
-  font-family: expo-serif-pro, serif;
-  font-weight: 400;
-  font-style: normal;
   padding: 0;
   margin: 0;
   box-sizing: border-box;
@@ -25,10 +22,6 @@ main {
   padding: 100px 20px 0 20px;
   margin: 0 auto;
   background-color: #fff;
-}
-
-a {
-  text-decoration: none;
 }
 
 .space1 {
@@ -82,7 +75,11 @@ h4 {
 p,
 a,
 li,
-button {
+button,
+input {
+  font-family: expo-serif-pro, serif;
+  font-weight: 400;
+  font-style: normal;
   font-size: 1.2rem;
   padding: 0 0 10px 0;
   color: #454C4C;
@@ -90,6 +87,7 @@ button {
 
 a {
   cursor: pointer;
+  text-decoration: none;
 }
 
 strong {
@@ -554,7 +552,7 @@ vp-center {
   object-fit: cover;
   border-radius: 100px;
   margin: 0;
-  flex-basis: 100px;
+  flex-basis: 70px;
 }
 
 .review_wrap p {
@@ -662,5 +660,6 @@ vp-center {
   .review_img {
     width: 100px;
     height: 100px;
+    flex-basis: 100px;
   }
 }
